examples/african_hospitals/server/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address: 
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config: 
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: tetrate_route_config
            virtual_hosts:
            - name: tetrate
              domains: ["tetrate.io"]
              routes: [{}]
            
            - name: test_hosts
              domains: ["test.tetrate.io","dev.tetrate.io","qa.tetrate.io"]
              routes: [{}]

            - name: grpc_hosts
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/"
                  grpc: {}
                  route:
                    cluster: grpc_apis


clusters:
- name: hello_world_service
  load_assignment: 
    cluster_name: hello_world_service
    endpoints:
    - lb_endpoints:
      - endpoint: 
        address: 
          socket_address:
            address: 127.0.0.1
            port_value: 8000

- name: grpc_apis
  load_assignment:
    cluster_name: grpc_apis
    endpoints:
      - lb_endpoints:
        - endpoint: 
          address: 
            socket_address:
              address: 127.0.0.1
              port_value: 8080
